testcases/negative/inspect-missing-address.otk
OFFICETALK/1.0
DOCTYPE word

INSPECT
  INCLUDE content
